--- a/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
+++ b/app/src/main/res/layout/caretaker_new_house_bottomsheet.xml
@@ -6,6 +6,13 @@
     android:background="@drawable/rounded_dialog"
     android:layout_height="match_parent">
 
+    <View
+        android:layout_width="24dp"
+        android:layout_height="3dp"
+        android:layout_marginTop="16dp"
+        android:background="?attr/textBlack100"
+        android:layout_gravity="center_horizontal"/>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -15,12 +22,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
-
-            <View
-                android:layout_width="16dp"
-                android:layout_height="2dp"
-                android:background="?attr/textBlack100"
-                android:layout_gravity="center_horizontal"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -111,8 +112,11 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/house_category_single"
                         android:layout_marginEnd="8dp"
-                        android:background="@drawable/rounded_edit_text"
-                        android:padding="8dp">
+                        android:background="@drawable/pill_stroke"
+                        android:paddingStart="24dp"
+                        android:paddingEnd="24dp"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -129,9 +133,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/house_category_bedsitter"
-                        android:background="@drawable/rounded_edit_text"
                         android:layout_marginEnd="8dp"
-                        android:padding="8dp">
+                        android:background="@drawable/pill_stroke"
+                        android:paddingStart="24dp"
+                        android:paddingEnd="24dp"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -149,8 +156,11 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/house_category_one_bedroom"
                         android:layout_marginEnd="8dp"
-                        android:background="@drawable/rounded_edit_text"
-                        android:padding="8dp">
+                        android:background="@drawable/pill_stroke"
+                        android:paddingStart="24dp"
+                        android:paddingEnd="24dp"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -168,8 +178,11 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/house_category_two_bedroom"
                         android:layout_marginEnd="8dp"
-                        android:background="@drawable/rounded_edit_text"
-                        android:padding="8dp">
+                        android:background="@drawable/pill_stroke"
+                        android:paddingStart="24dp"
+                        android:paddingEnd="24dp"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -188,8 +201,11 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/house_category_three_bedroom"
                         android:layout_marginEnd="8dp"
-                        android:background="@drawable/rounded_edit_text"
-                        android:padding="8dp">
+                        android:background="@drawable/pill_stroke"
+                        android:paddingStart="24dp"
+                        android:paddingEnd="24dp"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -208,8 +224,11 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/house_category_mansion"
                         android:layout_marginEnd="8dp"
-                        android:background="@drawable/rounded_edit_text"
-                        android:padding="8dp">
+                        android:background="@drawable/pill_stroke"
+                        android:paddingStart="24dp"
+                        android:paddingEnd="24dp"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -227,8 +246,11 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/house_category_other"
                         android:layout_marginEnd="8dp"
-                        android:background="@drawable/rounded_edit_text"
-                        android:padding="8dp">
+                        android:background="@drawable/pill_stroke"
+                        android:paddingStart="24dp"
+                        android:paddingEnd="24dp"
+                        android:paddingTop="16dp"
+                        android:paddingBottom="16dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -244,94 +266,51 @@
 
             </HorizontalScrollView>
 
-            <!--House Number-->
-            <com.google.android.material.textfield.TextInputLayout
+            <!--House rooms count-->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="56dp"
-                app:hintEnabled="false"
-                android:padding="0dp"
-                app:passwordToggleEnabled="false"
-                app:boxStrokeWidth="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
                 android:layout_marginTop="32dp"
-                app:passwordToggleTint="?attr/colorPrimary">
+                android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:inputType="number"
-                    android:gravity="center"
-                    android:lines="1"
-                    android:hint="Rooms Available"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Units Available : "
+                    android:textStyle="bold"
                     android:textSize="16sp"
                     android:textColor="?attr/textBlack700"
-                    android:background="@drawable/rounded_edit_text"
-                    android:id="@+id/houseRoomsAvailable"
-                    android:padding="0dp"/>
+                    android:includeFontPadding="false" />
 
-            </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    app:hintEnabled="false"
+                    android:padding="0dp"
+                    app:passwordToggleEnabled="false"
+                    app:boxStrokeWidth="0dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    app:passwordToggleTint="?attr/colorPrimary">
 
-            <!--Status, occupied or vacant-->
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:padding="8dp"-->
-<!--                android:gravity="center"-->
-<!--                android:layout_marginTop="16dp"-->
-<!--                android:orientation="horizontal">-->
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:inputType="number"
+                        android:gravity="center"
+                        android:lines="1"
+                        android:hint="Units"
+                        android:textSize="16sp"
+                        android:textColor="?attr/textBlack700"
+                        android:background="@drawable/rounded_edit_text"
+                        android:id="@+id/houseRoomsAvailable"
+                        android:padding="0dp"/>
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="Status"-->
-<!--                    android:textStyle="bold"-->
-<!--                    android:includeFontPadding="false"-->
-<!--                    android:textColor="?attr/textBlack300"-->
-<!--                    android:layout_marginEnd="16dp"/>-->
+                </com.google.android.material.textfield.TextInputLayout>
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:padding="8dp"-->
-<!--                    android:background="@drawable/rounded_corners"-->
-<!--                    android:orientation="horizontal">-->
+            </LinearLayout>
 
-<!--                    <RelativeLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_height="45dp"-->
-<!--                        android:id="@+id/vacantToggle"-->
-<!--                        android:background="@drawable/rounded_corners_active">-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_centerInParent="true"-->
-<!--                            android:includeFontPadding="false"-->
-<!--                            android:text="Vacant"-->
-<!--                            android:textColor="?attr/textBlack700"-->
-<!--                            android:textStyle="bold" />-->
-
-<!--                    </RelativeLayout>-->
-
-<!--                    <RelativeLayout-->
-<!--                        android:layout_width="100dp"-->
-<!--                        android:layout_height="45dp"-->
-<!--                        android:id="@+id/occupiedToggle"-->
-<!--                        android:background="@drawable/rounded_corners">-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_centerInParent="true"-->
-<!--                            android:includeFontPadding="false"-->
-<!--                            android:text="Occupied"-->
-<!--                            android:textColor="?attr/textBlack700"-->
-<!--                            android:textStyle="bold" />-->
-
-<!--                    </RelativeLayout>-->
-
-<!--                </LinearLayout>-->
-
-<!--            </LinearLayout>-->
 
             <!--Pricing per month-->
             <TextView
@@ -342,7 +321,7 @@
                 android:textSize="16sp"
                 android:textColor="?attr/textBlack700"
                 android:includeFontPadding="false"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="32dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -397,7 +376,7 @@
                     android:text="/mo"
                     android:textStyle="bold"
                     android:layout_marginStart="16dp"
-                    android:textColor="?attr/textBlack100"
+                    android:textColor="?attr/colorPrimary"
                     android:textSize="14sp" />
 
             </LinearLayout>
